# rai-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  behave.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/data_drift/uci_adult/: README.md  adult_job_config.json  feature_mapping.csv  uci_adult.py
examples/data_drift/uci_adult/data/: .gitignore  Makefile
examples/stats/z_ir/data/: Morris_table_1_csv.csv
src/raitools/: __init__.py
src/raitools/data_drift/: __init__.py
src/raitools/data_drift/domain/: bundle.py  data_drift_record.py  data_drift_summary.py  data_summary.py  drift_summary.py  html_report_builder.py  job_config.py  statistical_test.py  statistical_test_result.py
src/raitools/data_drift/use_cases/: generate_report.py  process_bundle.py
src/raitools/domain/: rai_error.py
src/raitools/metrics/: infinity.py  jensen_shannon.py
src/raitools/services/: __init__.py
src/raitools/services/data_drift/: api.py  bundles.py  data_file_readers.py  (+1 more)
src/raitools/stats/: __init__.py  chi_squared.py  kolmogorov_smirnov.py  types.py  z_ir.py
test_acceptance/features/steps/: tutorial.py
tests/: __init__.py  asserts.py  conftest.py  test_data_drift.py  test_raitools.py
tests/data_drift/: conftest.py  test_generate_report.py  test_process_bundle.py
tests/data_drift/use_cases/: __init__.py  conftest.py  test_generate_report.py
tests/metrics/: test_infinity.py  test_jensen_shannon.py
tests/services/data_drift/: __init__.py  test_data_file_readers.py
tests/stats/: test_z_ir.py
(+102 files in other folders)
